Update swagger with spec details
