# src/CarbonAware.WebApi/src/Models/EmissionsForecastBatchDTO.cs
@@ -1,11 +1,14 @@
 namespace CarbonAware.WebApi.Models;
 
-using CarbonAware.Model;
+using System.ComponentModel.DataAnnotations;
 using System.Text.Json.Serialization;
 
 [Serializable]
 public record EmissionsForecastBatchDTO : EmissionsForecastBaseDTO
 {
+  /// <summary>Most recent forecast as of this historical request time</summary>
+  /// <example>2022-06-01T00:00:00Z</example>
   [JsonPropertyName("requestedAt")]
+  [Required()]
   public DateTimeOffset RequestedAt { get; set; }
 }
